    get_origins(package) which determines the origins (distribution/vendor/
    repository names) for a given package. Move the dodgy hack from
    apport/ui.py to the backend, where it belongs to. Also add a test case.
  * debian/control: Add python-apt dependency to python-apport.
  * debian/control: Remove debianutils dependency, it's essential.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 27 Apr 2007 18:30:07 +0200

apport (0.77) gutsy; urgency=low

  * apport/report.py: Replace any() call with a list comprehension to work
    with Python < 2.5. (LP: #104864)
  * apport/report.py: Move the ctypes import to the one place where we
    actually need it, and do not entirely fail if they do not exist (such as
    in Python 2.4). It is only required for non-default Feisty kernels anyway.
    (LP: #107662)
  * apport/chroot.py: Fix test suite to work with Python 2.4's tarfile module
    output format.
  * debian/local/setup-apport-retracer: Generalized some feisty specific
    bits, set default release to gutsy.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 23 Apr 2007 12:22:17 +0200

apport (0.76) feisty; urgency=low

  * Move python_hook.py out of the apport module to apport_python_hook.py, so
    that it does not inflict the expensive import of all apport related
    modules to every python program. Adapt module prefixes accordingly.
    (LP: #105764)
  * setup.py, debian/python-apport.install: Install apport_python_hook.py into
    the python-apport binary package.
  * apport/ui.py test suite: Unset locale related environment variables so
    that the tests which check strings are not invalidated by translations.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Apr 2007 11:47:50 +0200

apport (0.75) feisty; urgency=low

  * apport/report.py, add_proc_info(): Chop off /rofs/ prefix from
    ExecutablePath, so that crashes work on the live system, too. Arguably a
    kernel bug, but probably too hard to fix at this time. (LP: #102909)