@@ -6,8 +6,13 @@ apport (0.78) UNRELEASED; urgency=low
     apport/ui.py to the backend, where it belongs to. Also add a test case.
   * debian/control: Add python-apt dependency to python-apport.
   * debian/control: Remove debianutils dependency, it's essential.
+  * Drop backends/packaging-dpkg.py. It had some hackish usage of python-apt
+    anyway, since some things just cannot be figured out with dpkg alone.
+    Since we have to give up on that idea, implement a new clean packaging
+    backend 'packaging-apt-dpkg.py' which now uses python-apt and dpkg in a
+    clean way.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 27 Apr 2007 18:30:07 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 27 Apr 2007 19:15:09 +0200
 
 apport (0.77) gutsy; urgency=low
 
